--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Aidan Yang"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "Undergraduate Researcher at Queen's University"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://aidanby.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "aidanby/aidanby.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
