--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Kingston, Ontario"
   employer         :
   googlescholar    : "https://scholar.google.ca/citations?user=KJ2zjBwAAAAJ&hl=en"
-  email            :
+  email            : "a.yang@queensu.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
