--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "aidanby"
   google_plus      :
   keybase          :
   instagram        :
