--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /talks/    
     
   - title: "CV"
-    url: /cv/
+    url: /files/CV.pdf
     
   - title: "Guide"
     url: /markdown/
