--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Aidan Yang"
+title                    : "About"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Aidan Yang"
 description              : &description "Undergraduate Researcher at Queen's University"
 url                      : https://aidanby.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
