--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "About"
+title                    : "Aidan Yang"
 title_separator          : "-"
 name                     : &name ""
 description              : &description "Undergraduate Researcher at Queen's University"
