--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Aidan Yang"
 title_separator          : "-"
-name                     : &name ""
+name                     : ""
 description              : &description "Undergraduate Researcher at Queen's University"
 url                      : https://aidanby.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
