--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Aidan Yang"
-  avatar           : "profile2.jpg"
+  avatar           : "profile.jpg"
   bio              : "Undergraduate Researcher at Queen's University"
   location         : "Kingston, Ontario"
   employer         :
