--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "AidanYang5"
+  twitter          : "aidanzhyang"
   vine             :
   weibo            :
   xing             :
